src/main/default/objects/Preventative_Maintenance_Criterion__c/Preventative_Maintenance_Criterion__c.object-meta.xml
<CustomObject>
    <label>Preventative Maintenance Criterion</label>
    <nameField>
        <displayFormat>PMC-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Preventative Maintenance Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>