src/main/default/objects/Preventative_Maintenance_Criterion__c/fields/Calender_Interval__c.field-meta.xml
<CustomField>
    <fullName>Calender_Interval__c</fullName>
    <label>Calender Interval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>