src/main/default/objects/Preventative_Maintenance_Criterion__c/fields/Calender_UOM__c.field-meta.xml
<CustomField>
    <fullName>Calender_UOM__c</fullName>
    <label>Calender UOM</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Month</fullName>
                <default>true</default>
                <label>Month</label>
            </value>
            <value>
                <fullName>Day</fullName>
            </value>
            <value>
                <fullName>Hour</fullName>
            </value>
            <value>
                <fullName>Minute</fullName>
            </value>
            <value>
                <fullName>Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>