src/main/default/objects/Preventative_Maintenance_Criterion__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <label>Effective Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>