src/main/default/objects/Preventative_Maintenance_Criterion__c/fields/Evaluation_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Timestamp__c</fullName>
    <description>Evaluation Timestamp</description>
    <label>Evaluation Timestamp</label>
    <type>DateTime</type>
</CustomField>