src/main/default/objects/Preventative_Maintenance_Criterion__c/fields/Last_Meter_Value__c.field-meta.xml
<CustomField>
    <fullName>Last_Meter_Value__c</fullName>
    <label>Last Meter Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>