src/main/default/objects/Preventative_Maintenance_Criterion__c/fields/Next_Run__c.field-meta.xml
<CustomField>
    <fullName>Next_Run__c</fullName>
    <label>Next Run</label>
    <type>DateTime</type>
</CustomField>