src/main/default/objects/Preventative_Maintenance_Criterion__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Every</fullName>
            </value>
            <value>
                <fullName>></fullName>
            </value>
            <value>
                <fullName>&lt;</fullName>
            </value>
            <value>
                <fullName>=</fullName>
            </value>
            <value>
                <fullName>!=</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>