src/main/default/objects/Preventative_Maintenance_Criterion__c/fields/Preventative_Maintenance_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Preventative_Maintenance_Schedule__c</fullName>
    <label>Preventative Maintenance Schedule</label>
    <referenceTo>Preventative_Maintenance_Schedule__c</referenceTo>
    <relationshipLabel>Preventative Maintenance Criteria</relationshipLabel>
    <relationshipName>Preventative_Maintenance_Criteria</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>