src/main/default/objects/Preventative_Maintenance_Criterion__c/fields/Target_Field__c.field-meta.xml
<CustomField>
    <fullName>Target_Field__c</fullName>
    <label>Target Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>