src/main/default/objects/Preventative_Maintenance_Criterion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Calender_Interval__c</columns>
    <columns>Calender_UOM__c</columns>
    <columns>Next_Run__c</columns>
    <columns>Operator__c</columns>
    <columns>Target_Field__c</columns>
    <columns>Value__c</columns>
    <columns>Preventative_Maintenance_Schedule__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>